# ChangeLog for dev-python/eyeD3
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/eyeD3/ChangeLog,v 1.32 2008/09/28 06:50:24 loki_val Exp $

*eyeD3-0.6.16 (28 Sep 2008)

  28 Sep 2008; Peter Alfredsen <loki_val@gentoo.org> +eyeD3-0.6.16.ebuild:
  Bump, bug 236319.

*eyeD3-0.6.15 (13 May 2008)

  13 May 2008; Ali Polatel <hawking@gentoo.org> +eyeD3-0.6.15.ebuild:
  Version bump.

  09 May 2008; Raúl Porcel <armin76@gentoo.org> eyeD3-0.6.14.ebuild:
  sparc stable

  12 Nov 2007; Samuli Suominen <drac@gentoo.org> eyeD3-0.6.14.ebuild:
  amd64 stable

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> eyeD3-0.6.14.ebuild:
  ppc. stable

  02 Aug 2007; Raúl Porcel <armin76@gentoo.org> eyeD3-0.6.14.ebuild:
  x86 stable

  29 Jul 2007; Tom Gall <tgall@gentoo.org> eyeD3-0.6.14.ebuild:
  stable on ppc64

  16 Jul 2007; Raúl Porcel <armin76@gentoo.org> eyeD3-0.6.14.ebuild:
  alpha stable

*eyeD3-0.6.14 (29 May 2007)

  29 May 2007; Lukasz Strzygowski <lucass@gentoo.org> -eyeD3-0.6.11.ebuild,
  -eyeD3-0.6.12.ebuild, +eyeD3-0.6.14.ebuild:
  Version bump (bug #179925). Dropped old versions.

*eyeD3-0.6.12 (25 Feb 2007)

  25 Feb 2007; Lukasz Strzygowski <lucass@gentoo.org> +eyeD3-0.6.12.ebuild:
  Version bump, added NEED_PYTHON.

*eyeD3-0.6.11 (28 Jan 2007)

  28 Jan 2007; Tiziano Müller <dev-zero@gentoo.org> +eyeD3-0.6.11.ebuild:
  Version bump and cleanup (bug #164310).

  27 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> eyeD3-0.6.10.ebuild:
  Stable on sparc

  24 Nov 2006; Markus Rothe <corsair@gentoo.org> eyeD3-0.6.10.ebuild:
  Stable on ppc64; bug #155992

  21 Nov 2006; Christian Faulhammer <opfer@gentoo.org> eyeD3-0.6.10.ebuild:
  stable x86, bug #154832

  18 Nov 2006; Tobias Scherbaum <dertobi123@gentoo.org> eyeD3-0.6.10.ebuild:
  ppc stable, bug #154832

  11 Nov 2006; Olivier Crête <tester@gentoo.org> eyeD3-0.6.10.ebuild:
  Stable on amd64
