@@ -1,6 +1,4 @@
-DIST eyeD3-0.6.15.tar.gz 107517 RMD160 716f7a4e68856ddafe85c8dbda44c3a89ae0f889 SHA1 c79b3f8c39b500e0046775cf08306787a581c34b SHA256 f751f7b1dd4ea7803ab24b2b0417ae1a0f3b0ec18535006fdda0e541faaf4f41
-DIST eyeD3-0.6.16.tar.gz 108217 RMD160 8654e2ff30c5cdc7debc2683760ab4940c0cf22e SHA1 d6644a6c2054359209cf3159bb7d79e82758a9e1 SHA256 21bbc4ed120c43939ddbb766fdee56fcf055dfe7e1b34e9090306d0da7b7d7cc
-EBUILD eyeD3-0.6.15.ebuild 869 RMD160 1c816ffe1d4361e5be814fdf6dbea421351acaac SHA1 d2c33a780de82f99f2dbf6dd2dbd13b9abb21e16 SHA256 697d60ea2743acb3523edf06e13d4dacd5dd84a6cb24ee7c206eb7d7438d1179
-EBUILD eyeD3-0.6.16.ebuild 883 RMD160 20549aa1d039c090426c6a1e87e077399e82c38e SHA1 05e881a6f69c9dfbe0c603eea55fbd4ec759bae3 SHA256 a146cae17edeead2c4abb240608ec87d0b25b47fa083f0c4231433c7109727f5
-MISC ChangeLog 3947 RMD160 e1c2702f474dd93f1ccde8be287d857527a2f9bf SHA1 b546ae6469d71f8c659f5a708dc5a421b967ab2d SHA256 bf7b2819e7c87ee576f872a7f7d36833358c8a577c3f4416ad9614068e64f06f
-MISC metadata.xml 178 RMD160 81662fc438ac786c5a658b5afb4db7532473d66f SHA1 bf610c97409672aa6754fa5f191b1816ea26dbd0 SHA256 b9276017360d2a77b7a4c510b7fb669908cba1ebd5af08782bd30e831bea5d4f
+DIST eyeD3-0.6.17.tar.gz 111425 RMD160 32891c885f175e7f2da1201359d73309366930e9 SHA1 a607ce4355f395ef137c265f8dad60ac67ba4e47 SHA256 a1f3410ee1803e4aaf6526cf5cca6a863990af02a43abb2cfbbd50595e103f3f
+EBUILD eyeD3-0.6.17.ebuild 699 RMD160 3441b77b57bcf86a2f30270b538f80a395a19173 SHA1 3daf0aa1819ce4fa6ecabd02acc17d593a8875a9 SHA256 6acc23690f154fd40a0e85d140cd0e99d8633a6d4d9730b59af82f582d5c442e
+MISC ChangeLog 4070 RMD160 aef05c31fb15e9f9fadf6e951b43adbb2f53b6f4 SHA1 78d79bf96c64328e712884ff95cb4b7392934301 SHA256 42123c7be1182e793dfd351be80eb85ab97a3760af6f73c00a45e4a3e9676e5e
+MISC metadata.xml 180 RMD160 c2f33738d640d9b5d01befd5fc7f366a58ea462f SHA1 5704f955307c6ff3b2aac62a3458e6cc50e32d62 SHA256 cc06a12ae2dbcff1975aaa40f4b1e52c85cc3522a2a306f8ec0e386025e5ec15
