@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/eyeD3
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/eyeD3/ChangeLog,v 1.32 2008/09/28 06:50:24 loki_val Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/eyeD3/ChangeLog,v 1.33 2009/06/02 22:26:41 ssuominen Exp $
+
+*eyeD3-0.6.17 (02 Jun 2009)
+
+  02 Jun 2009; Samuli Suominen <ssuominen@gentoo.org> +eyeD3-0.6.17.ebuild:
+  Version bump.
 
 *eyeD3-0.6.16 (28 Sep 2008)
 
